Developer/src/objects/SFDC_Candidate__c.object
<CustomObject>
    <description>候補者</description>
    <fields>
        <fullName>Background_Check__c</fullName>
        <label>素性調査</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Compensation__c</fullName>
        <label>給与</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Candidate_Contact_Date__c</fullName>
        <label>連絡日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Candidate_JP_work_authorization__c</fullName>
        <label>日本での労働許可</label>
        <picklist>
            <picklistValues>
                <fullName>はい</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>いいえ</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_Status__c</fullName>
        <label>候補者の状況</label>
        <picklist>
            <picklistValues>
                <fullName>未コンタクト</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>面接希望</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>再面接希望</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>給与・待遇に関して再交渉</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>職務内容に関して再交渉希望</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>勤務地に関して再交渉希望</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>すべて合意</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>応募キャンセル</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Candidate_assign_to__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>担当者</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N10000000EAHIEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Employer__c</fullName>
        <label>現在の勤務先</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Current_Position_Duration__c</fullName>
        <label>現在の勤務先在職期間</label>
        <picklist>
            <picklistValues>
                <fullName>0～6ヶ月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7～12ヶ月</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1～2年</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3～4年</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5年以上</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Disposition__c</fullName>
        <label>採用状況</label>
        <picklist>
            <picklistValues>
                <fullName>進行中</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>応募者によるキャンセル</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>採用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>給与調整中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>勤務内容調整中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>未着手</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Education__c</fullName>
        <label>学歴</label>
        <picklist>
            <picklistValues>
                <fullName>高校</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>技術学校</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大学在学中</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>短期大学卒</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>大学卒</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>修士</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>博士</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>性別</label>
        <picklist>
            <picklistValues>
                <fullName>男</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>女</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interviewer__c</fullName>
        <label>面接者</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Codes__c</fullName>
        <label>職種コード</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Job_Location__c</fullName>
        <label>勤務地</label>
        <picklist>
            <picklistValues>
                <fullName>本社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>西日本支社</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>北日本支社</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>役職</label>
        <picklist>
            <picklistValues>
                <fullName>副社長</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>役員</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>マネージャー</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>一般</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>アシスタント</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Preferred_Phone__c</fullName>
        <description>連絡先の電話番号</description>
        <label>電話番号</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Previously_Interviewed__c</fullName>
        <label>事前面接</label>
        <picklist>
            <picklistValues>
                <fullName>いいえ</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>はい</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_for_Declining_Offer__c</fullName>
        <label>応募キャンセルの理由</label>
        <picklist>
            <picklistValues>
                <fullName>給与が低すぎる</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>地位が好ましくない</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>別の仕事をみつけた</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Recruiter_Notes__c</fullName>
        <label>採用担当者メモ</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Referral_Date__c</fullName>
        <label>紹介日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Referring_Employee_Relationship__c</fullName>
        <label>紹介社員との関係</label>
        <picklist>
            <picklistValues>
                <fullName>友人</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>親族</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ビジネス上の関係</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>元同僚</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>その他</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Referring_Employee__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>紹介社員</label>
        <referenceTo>SFDC_Referring_Employee__c</referenceTo>
        <relationshipName>R00N10000000EAGUEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Resume_Rcvd_Date__c</fullName>
        <label>履歴書受領日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resume__c</fullName>
        <label>履歴書</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Active_Declined_Status__c</fullName>
        <label>状況</label>
        <picklist>
            <picklistValues>
                <fullName>活動</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>活動前</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>採用</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>不採用</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Address__c</fullName>
        <label>住所</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Alt_Email__c</fullName>
        <description>代替電子メールアドレス</description>
        <label>電子メール２</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Birthdate__c</fullName>
        <label>生年月日</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Email__c</fullName>
        <label>電子メール</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>SFDC_Candidate_Name__c</fullName>
        <description>Full name of the candidate</description>
        <label>氏名</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SFDC_Department__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>部署</label>
        <referenceTo>SFDC_Department__c</referenceTo>
        <relationshipName>R00N10000000EAHFEA4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>開始日</label>
        <type>Date</type>
    </fields>
    <label>候補者</label>
    <listViews>
        <fullName>View</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <nameField>
        <label>候補者名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>